# snake-cpp

./: CMakeLists.txt  README.md
source/core/: CMakeLists.txt  GameConstants.h
source/core/private/: Board.cpp  Utilities.cpp
source/core/public/: Board.h  Utilities.h
